--- a/index.html
+++ b/index.html
@@ -3,10 +3,135 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/b45a544bb7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/main.css">
     <title>Document</title>
+    
 </head>
 <body>
-    
+    <div class="nav-container">
+        <header>
+            <a href="index.html" class="logo">Khalis Rahman</a>
+            <nav>
+                <ul>
+                    <li><a href="#">My Work</a></li>
+                    <li><a href="#">My Skills</a></li>
+                    <li><a href="#">Hire Me</a></li>
+                </ul>
+            </nav>
+        </header>
+        <div class="social-header">
+            <ul>
+                <li><a href=""><i class="fab fa-github"></i></a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="hero">
+        <div class="content">
+            <h1>Beautifully Crafted Web Experiences</h1>
+            <div class="meet">
+                <span><i class="fas fa-hand-point-down"></i></span>
+                <p>Meet Khalis Rahman</p>
+            </div>
+            <svg width="45" height="87" viewBox="0 0 45 87">
+                <g id="Rectangle_3" data-name="Rectangle 3" fill="none" stroke="#fff" stroke-width="6">
+                  <rect width="45" height="87" rx="22.5" stroke="none"/>
+                  <rect x="3" y="3" width="39" height="81" rx="19.5" fill="none"/>
+                </g>
+              </svg>
+        </div>
+        <svg class="hero-design" width="560" height="560" viewBox="0 0 560 560">
+            <g id="Group_1" data-name="Group 1" transform="translate(-965 -196)">
+              <rect class="square-anim" id="Rectangle_6" data-name="Rectangle 6" width="140" height="140" rx="28" transform="translate(1245 196)" fill="#6700ee"/>
+              <rect class="square-anim"  id="Rectangle_10" data-name="Rectangle 10" width="140" height="140" rx="28" transform="translate(1245 476)" fill="#6700ee"/>
+              <rect class="square-anim"  id="Rectangle_8" data-name="Rectangle 8" width="140" height="140" rx="28" transform="translate(1385 336)" fill="#6700ee" opacity="0.287"/>
+              <rect class="square-anim"  id="Rectangle_7" data-name="Rectangle 7" width="140" height="140" rx="28" transform="translate(1105 336)" fill="#fff"/>
+              <rect class="square-anim"  id="Rectangle_11" data-name="Rectangle 11" width="140" height="140" rx="28" transform="translate(1105 616)" fill="#fff"/>
+              <rect class="square-anim"  id="Rectangle_9" data-name="Rectangle 9" width="140" height="140" rx="28" transform="translate(965 476)" fill="#fff" opacity="0.241"/>
+              <circle class="square-anim"  id="Ellipse_3" data-name="Ellipse 3" cx="70" cy="70" r="70" transform="translate(1105 476)" fill="#00f7c7"/>
+              <circle class="square-anim"  id="Ellipse_5" data-name="Ellipse 5" cx="70" cy="70" r="70" transform="translate(1245 336)" fill="#f85fcd"/>
+            </g>
+          </svg>
+    </div>
+
+    <section class='featured'>
+        <div class="left">
+            <div class="inner transition2">
+                <p class="subtitle">Featured Project</p>
+                <a href="#" class='featured-title'>SaladBar & Kitchen</a>
+
+                <p class="featured-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed est optio nulla aut. Omnis!</p>
+            </div>
+        </div>
+        <img class="right transition2" src="images/project-1.png" alt="Featured Project">
+    </section>
+
+    <section class="skills">
+        <div class="skills-container">
+            <ul>
+                <li class="transition2">
+                    <div class="icon-container one">
+                        <i class="fab fa-js-square"></i>
+                    </div>
+                    <p class="skill-title">Javascript</p>
+                    <p class="featured-desc skill-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum, praesentium!</p>
+                </li>
+                <li class="transition2">
+                    <div class="icon-container two">
+                        <i class="fab fa-react"></i>
+                    </div>
+                    <p class="skill-title">React</p>
+                    <p class="featured-desc skill-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum, praesentium!</p>
+                </li>
+                <li class="transition2">
+                    <div class="icon-container three">
+                        <i class="fab fa-html5"></i>
+                    </div>
+                    <p class="skill-title">HTML5</p>
+                    <p class="featured-desc skill-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum, praesentium!</p>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="portfolio">
+        <div class="portfolio-container transition3">
+            <div class="portfolio-left">
+                <div class="inner">
+                    <p class="subtitle">SaladBar & Kitchen</p>
+                    <p class="featured-title">SaladBar.com</p>
+                    <p class="featured-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, iusto?</p>
+                </div>
+            </div>
+            <a href="#">
+                <img src="images/project-1.png" alt="saladbar">
+            </a>
+        </div>
+        <div class="portfolio-container transition3">
+            <div class="portfolio-left">
+                <div class="inner">
+                    <p class="subtitle">SaladBar & Kitchen</p>
+                    <p class="featured-title">SaladBar.com</p>
+                    <p class="featured-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, iusto?</p>
+                </div>
+            </div>
+            <a href="#">
+                <img src="images/project-1.png" alt="saladbar">
+            </a>
+        </div>
+        <div class="portfolio-container transition3">
+            <div class="portfolio-left">
+                <div class="inner">
+                    <p class="subtitle">SaladBar & Kitchen</p>
+                    <p class="featured-title">SaladBar.com</p>
+                    <p class="featured-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, iusto?</p>
+                </div>
+            </div>
+            <a href="#">
+                <img src="images/project-1.png" alt="saladbar">
+            </a>
+        </div>
+    </section>
 </body>
 </html>
