Completed responsive css and html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </header>
         <div class="social-header">
             <ul>
-                <li><a href=""><i class="fab fa-github"></i></a></li>
+                <li><a href=""><i class="fab fa-github fa-lg"></i></a></li>
             </ul>
         </div>
     </div>
@@ -34,12 +34,16 @@
                 <span><i class="fas fa-hand-point-down"></i></span>
                 <p>Meet Khalis Rahman</p>
             </div>
-            <svg width="45" height="87" viewBox="0 0 45 87">
-                <g id="Rectangle_3" data-name="Rectangle 3" fill="none" stroke="#fff" stroke-width="6">
-                  <rect width="45" height="87" rx="22.5" stroke="none"/>
-                  <rect x="3" y="3" width="39" height="81" rx="19.5" fill="none"/>
+            <svg class="scroll" width="45" height="87" viewBox="0 0 45 87">
+                <g id="Scroll" transform="translate(-169 -650)">
+                  <g id="Rectangle_3" data-name="Rectangle 3" transform="translate(169 650)" fill="none" stroke="#fff" stroke-width="6">
+                    <rect width="45" height="87" rx="22.5" stroke="none"/>
+                    <rect x="3" y="3" width="39" height="81" rx="19.5" fill="none"/>
+                  </g>
+                  <ellipse id="Ellipse_1" data-name="Ellipse 1" cx="13.5" cy="14" rx="13.5" ry="14" transform="translate(178 662)" fill="#fff"/>
                 </g>
               </svg>
+              
         </div>
         <svg class="hero-design" width="560" height="560" viewBox="0 0 560 560">
             <g id="Group_1" data-name="Group 1" transform="translate(-965 -196)">
@@ -72,24 +76,24 @@
             <ul>
                 <li class="transition2">
                     <div class="icon-container one">
-                        <i class="fab fa-js-square"></i>
+                        <i class="fab fa-js-square fa-7x"></i>
                     </div>
                     <p class="skill-title">Javascript</p>
-                    <p class="featured-desc skill-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum, praesentium!</p>
+                    <p class="featured-desc skill-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
                 </li>
                 <li class="transition2">
                     <div class="icon-container two">
-                        <i class="fab fa-react"></i>
+                        <i class="fab fa-react fa-7x"></i>
                     </div>
                     <p class="skill-title">React</p>
-                    <p class="featured-desc skill-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum, praesentium!</p>
+                    <p class="featured-desc skill-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
                 </li>
                 <li class="transition2">
                     <div class="icon-container three">
-                        <i class="fab fa-html5"></i>
+                        <i class="fab fa-html5 fa-7x"></i>
                     </div>
                     <p class="skill-title">HTML5</p>
-                    <p class="featured-desc skill-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum, praesentium!</p>
+                    <p class="featured-desc skill-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
                 </li>
             </ul>
         </div>
