Added IDs in html script

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <a href="index.html" class="logo">Khalis Rahman</a>
             <nav>
                 <ul>
-                    <li><a href="#">My Work</a></li>
-                    <li><a href="#">My Skills</a></li>
+                    <li><a href="#portfolio">My Work</a></li>
+                    <li><a href="#skills">My Skills</a></li>
                     <li><a href="#">Hire Me</a></li>
                 </ul>
             </nav>
@@ -71,7 +71,7 @@
         <img class="right transition2" src="images/project-1.png" alt="Featured Project">
     </section>
 
-    <section class="skills">
+    <section id="skills"class="skills">
         <div class="skills-container">
             <ul>
                 <li class="transition2">
@@ -99,7 +99,7 @@
         </div>
     </section>
 
-    <section class="portfolio">
+    <section id="portfolio"class="portfolio">
         <div class="portfolio-container transition3">
             <div class="portfolio-left">
                 <div class="inner">
