Added links to featured project

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<div class="social-header">
 				<ul>
 					<li>
-						<a href=""><i class="fab fa-github fa-lg"></i></a>
+						<a href="https://github.com/khalisabrahman"><i class="fab fa-github fa-lg"></i></a>
 					</li>
 				</ul>
 			</div>
@@ -164,19 +164,22 @@
 			<div class="left">
 				<div class="inner transition2">
 					<p class="subtitle">Featured Project</p>
-					<a href="#" class="featured-title">SaladBar & Kitchen</a>
+					<a href="https://easybank-landing-page-lyart-xi.vercel.app/" class="featured-title" target="_blank" rel="noreferrer noopener">Easybank</a>
 
 					<p class="featured-desc">
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed est
-						optio nulla aut. Omnis!
+						Front end mentor challenge
 					</p>
 				</div>
 			</div>
-			<img
-				class="right transition2"
-				src="images/project-1.png"
+
+			<a href="https://easybank-landing-page-lyart-xi.vercel.app/"  target="_blank" rel="noreferrer noopener" style='z-index: 300'>
+				<img
+				class="right transition2 box"
+				src="images/easybank.png"
 				alt="Featured Project"
 			/>
+			</a>
+			
 		</section>
 
 		<div id="skills" class="skills glide">
@@ -187,63 +190,63 @@
 							<i class="fab fa-js-square fa-5x"></i>
 						</div>
 						<p class="skill-title">Javascript</p>
-						<p class="featured-desc skill-desc">
+						<!-- <p class="featured-desc skill-desc">
 							Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-						</p>
+						</p> -->
 					</li>
 					<li class="transition2 glide__slide">
 						<div class="icon-container two">
 							<i class="fab fa-react fa-5x"></i>
 						</div>
 						<p class="skill-title">React</p>
-						<p class="featured-desc skill-desc">
+						<!-- <p class="featured-desc skill-desc">
 							Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-						</p>
+						</p> -->
 					</li>
 					<li class="transition2 glide__slide">
 						<div class="icon-container three">
 							<i class="fab fa-html5 fa-5x"></i>
 						</div>
 						<p class="skill-title">HTML5</p>
-						<p class="featured-desc skill-desc">
+						<!-- <p class="featured-desc skill-desc">
 							Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-						</p>
+						</p> -->
                     </li>
                     <li class="transition2 glide__slide">
 						<div class="icon-container one">
 							<i class="fab fa-css3-alt fa-5x"></i>
 						</div>
 						<p class="skill-title">CSS</p>
-						<p class="featured-desc skill-desc">
+						<!-- <p class="featured-desc skill-desc">
 							Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-						</p>
+						</p> -->
 					</li>
 					<li class="transition2 glide__slide">
 						<div class="icon-container one">
 							<i class="fab fa-sass fa-5x"></i>
 						</div>
 						<p class="skill-title">SASS</p>
-						<p class="featured-desc skill-desc">
+						<!-- <p class="featured-desc skill-desc">
 							Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-						</p>
+						</p> -->
                     </li>
                     <li class="transition2 glide__slide">
 						<div class="icon-container one">
 							<i class="fab fa-git-alt fa-5x"></i>
 						</div>
 						<p class="skill-title">GIT</p>
-						<p class="featured-desc skill-desc">
+						<!-- <p class="featured-desc skill-desc">
 							Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-						</p>
+						</p> -->
 					</li>
 					<li class="transition2 glide__slide">
 						<div class="icon-container one">
 							<i class="fab fa-git-alt fa-5x"></i>
 						</div>
 						<p class="skill-title">Material UI</p>
-						<p class="featured-desc skill-desc">
+						<!-- <p class="featured-desc skill-desc">
 							Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-						</p>
+						</p> -->
 					</li>
 				</ul>
 			</div>
