--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 
 		<!-- <section>
 			<p class="contact-me">
-				Like what you see? <span><a href="#"> Hire me </a></span>
+				Like what you see? <span><a id="hire" href="#hire"> Hire me </a></span>
 			</p>
 			<svg class="footer" width="1525" height="560" viewBox="0 0 1525 560">
 				<g id="Group_7" data-name="Group 7" transform="translate(0 -4417)">
