--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		/>
 		<link rel="stylesheet" href="./css/main.css" />
 
-		<title>Document</title>
+		<title>Khalis Portfolio</title>
 	</head>
 
 	<body>
@@ -41,7 +41,7 @@
 						<li><a href="#hire">Hire Me</a></li>
 					</ul>
 				</nav>
-				<!-- TODO -->
+				
 				<a
 					id="btnHamburger"
 					data-popup-trigger="one"
@@ -420,9 +420,7 @@
 				</a>
 			</div>
 		</section>
-		<p class="contact-me">
-			Like what you see? <span><a id="hire"> Hire me </a></span>
-		</p>
+		
 		<div id="hireModal" data-popup-modal="two" class="hirePopup-modal">
 			<form id='form'class="form">
 				<h2 class="modalTitle">Get In Touch.</h2>
@@ -430,7 +428,7 @@
 					<input
 					type="email"
 					id="email"
-					placeholder="Enter your email address"
+					placeholder="Your email address"
 					required
 					class="emailField"
 				/>
@@ -441,15 +439,10 @@
 				<i id="modalCloseBtn" class="fas fa-times"></i>
 			</form>
 		</div>
-		<!-- <section>
+		<section>
 			<p class="contact-me">
 				Like what you see? <span><a id="hire"> Hire me </a></span>
 			</p>
-			<div data-popup-modal="two" class="hirePopup-modal">
-				<input type="text" id="from_name" placeholder="Enter your email address" />
-				<input type="text" id="message" placeholder="Type your message" />
-				<button onclick="sendMail()">Send</button>
-			</div>
 			<svg class="footer" width="1525" height="560" viewBox="0 0 1525 560">
 				<g id="Group_7" data-name="Group 7" transform="translate(0 -4417)">
 					<g
@@ -541,7 +534,7 @@
 					</g>
 				</g>
 			</svg>
-		</section> -->
+		</section>
 		<script src="./js/sendMail.js"></script>
 		<script src="./js/script.js"></script>
 		<script
