Fixed modal opacity issue

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 					<div class="inner">
 						<p class="subtitle">Project 4</p>
 						<a
-							href=""
+							href="https://movie-finder-tan.vercel.app/"
 							class="featured-title"
 							target="_blank"
 							rel="noreferrer noopener"
@@ -432,7 +432,7 @@
 					required
 					class="emailField"
 				/>
-				<textarea row='5' ype="text" id="message" placeholder="Type your message" class="messageField"></textarea>
+				<textarea row='5' ype="text" id="message" placeholder="Type your message" class="messageField" required></textarea>
 				</div>
 				
 				<button class="sendBtn">Send</button>
