--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
 					rel="noreferrer noopener"
 				>
 					<img
-						src="images/moviefinder.png"
+						src="images/movieFinder.png"
 						alt="MovieFinder website"
 						class="portfolio-img"
 					/>
