add glide script tag

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         emailjs.init("user_pu2gux61Ir2TkWC6Pnnam");
       })();
     </script>
+	<script src="node_modules/@glidejs/glide/dist/glide.min.js"></script>
     <link
       rel="stylesheet"
       href="node_modules/@glidejs/glide/dist/css/glide.core.min.css"
